--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
          x-init="await initData()" 
          class="max-w-md mx-auto">
         <!-- Profile Section -->
-        <div class="text-center mb-8">
-            <div class="w-24 h-24 rounded-full overflow-hidden mx-auto mb-4">
-                <img :src="profile.image" alt="Profile" class="w-full h-full object-cover">
+        <div class="mb-8">
+            <div class="flex items-center justify-center gap-4">
+                <div class="w-24 h-24 rounded-full overflow-hidden flex-shrink-0">
+                    <img :src="profile.image" alt="Profile" class="w-full h-full object-cover">
+                </div>
+                <div class="text-left">
+                    <h1 class="text-2xl font-bold text-white mb-2" x-text="profile.username"></h1>
+                    <p class="text-white opacity-90" x-text="profile.bio"></p>
+                </div>
             </div>
-            <h1 class="text-2xl font-bold text-white mb-2" x-text="profile.username"></h1>
-            <p class="text-white opacity-90 mb-6" x-text="profile.bio"></p>
 
             <!-- Horizontal Icons -->
-            <div class="flex justify-center gap-4 mb-8">
+            <div class="flex justify-center gap-4 mt-8">
                 <template x-for="link in horizontalLinks" :key="link.title">
                     <a :href="link.url" 
                        class="w-12 h-12 flex items-center justify-center bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-full text-white transition-all duration-300 transform hover:scale-110"
@@ -32,8 +36,95 @@
             </div>
         </div>
 
+        <!-- Tab Headers -->
+        <div class="flex mb-8 border-b border-white border-opacity-20">
+            <button @click="activeCategory = 'product'" 
+                    class="flex-1 py-3 text-white font-medium relative flex items-center justify-center"
+                    :class="{'opacity-100': activeCategory === 'product', 'opacity-60': activeCategory !== 'product'}">
+                <!-- Product Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4" />
+                </svg>
+                <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-white transform transition-transform duration-300"
+                     :class="{'scale-x-100': activeCategory === 'product', 'scale-x-0': activeCategory !== 'product'}">
+                </div>
+            </button>
+            <button @click="activeCategory = 'content'" 
+                    class="flex-1 py-3 text-white font-medium relative flex items-center justify-center"
+                    :class="{'opacity-100': activeCategory === 'content', 'opacity-60': activeCategory !== 'content'}">
+                <!-- Video Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                </svg>
+                <div class="absolute bottom-0 left-0 right-0 h-0.5 bg-white transform transition-transform duration-300"
+                     :class="{'scale-x-100': activeCategory === 'content', 'scale-x-0': activeCategory !== 'content'}">
+                </div>
+            </button>
+        </div>
+
         <!-- Vertical Links Section -->         
-        <div class="space-y-4">
+        <div class="relative overflow-hidden touch-pan-x" 
+             @touchstart="handleTouchStart($event)"
+             @touchmove="handleTouchMove($event)"
+             @touchend="handleTouchEnd($event)">
+            <div class="flex transition-transform duration-300 ease-out" 
+                 :style="{ transform: `translateX(${activeCategory === 'product' ? '0' : '-100'}%)` }">
+                <!-- Product Links -->
+                <div class="w-full flex-shrink-0 px-1">
+                    <template x-for="link in verticalLinks.filter(l => l.category === 'product')" :key="link.url">
+                        <a :href="link.url" 
+                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-4 text-white mb-4 transition-all duration-300 transform hover:scale-105"
+                           target="_blank"
+                           :title="link.title">
+                            <div class="flex items-center">
+                                <div class="w-12 h-12 rounded overflow-hidden mr-4 flex-shrink-0">
+                                    <template x-if="link.image">
+                                        <img :src="link.image" :alt="link.title" class="w-full h-full object-cover">
+                                    </template>
+                                    <template x-if="!link.image">
+                                        <div class="w-full h-full bg-white bg-opacity-20 flex items-center justify-center">
+                                            <span class="text-sm">🔗</span>
+                                        </div>
+                                    </template>
+                                </div>
+                                <div class="flex flex-col text-left flex-grow">
+                                    <div class="font-medium" x-text="link.title"></div>
+                                    <div class="text-sm opacity-80" x-text="link.description"></div>
+                                </div>
+                            </div>
+                        </a>
+                    </template>
+                </div>
+
+                <!-- Content Links -->
+                <div class="w-full flex-shrink-0 px-1">
+                    <template x-for="link in verticalLinks.filter(l => l.category === 'content')" :key="link.url">
+                        <a :href="link.url" 
+                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-4 text-white mb-4 transition-all duration-300 transform hover:scale-105"
+                           target="_blank"
+                           :title="link.title">
+                            <div class="flex items-center">
+                                <div class="w-12 h-12 rounded overflow-hidden mr-4 flex-shrink-0">
+                                    <template x-if="link.image">
+                                        <img :src="link.image" :alt="link.title" class="w-full h-full object-cover">
+                                    </template>
+                                    <template x-if="!link.image">
+                                        <div class="w-full h-full bg-white bg-opacity-20 flex items-center justify-center">
+                                            <span class="text-sm">🔗</span>
+                                        </div>
+                                    </template>
+                                </div>
+                                <div class="flex flex-col text-left flex-grow">
+                                    <div class="font-medium" x-text="link.title"></div>
+                                    <div class="text-sm opacity-80" x-text="link.description"></div>
+                                </div>
+                            </div>
+                        </a>
+                    </template>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="space-y-4">
             <template x-for="link in verticalLinks" :key="link.url">
                 <a :href="link.url" 
                    class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-2 text-white text-center transition-all duration-300 transform hover:scale-105"
@@ -56,7 +147,7 @@
                     </div>
                 </a>
             </template>
-        </div>
+        </div> -->
     </div>
 
     <script>
@@ -65,7 +156,41 @@
                 profile: {},
                 horizontalLinks: [],
                 verticalLinks: [],
+                activeCategory: 'product',
+                touchStartX: 0,
+                touchMoveX: 0,
+                isSwiping: false,
                 
+                handleTouchStart(event) {
+                    this.touchStartX = event.touches[0].clientX;
+                    this.isSwiping = true;
+                },
+
+                handleTouchMove(event) {
+                    if (!this.isSwiping) return;
+                    this.touchMoveX = event.touches[0].clientX;
+                    event.preventDefault();
+                },
+
+                handleTouchEnd(event) {
+                    if (!this.isSwiping) return;
+                    
+                    const swipeDistance = this.touchMoveX - this.touchStartX;
+                    const swipeThreshold = 50;
+
+                    if (Math.abs(swipeDistance) > swipeThreshold) {
+                        if (swipeDistance > 0 && this.activeCategory === 'content') {
+                            this.activeCategory = 'product';
+                        } else if (swipeDistance < 0 && this.activeCategory === 'product') {
+                            this.activeCategory = 'content';
+                        }
+                    }
+
+                    this.touchStartX = 0;
+                    this.touchMoveX = 0;
+                    this.isSwiping = false;
+                },
+
                 async initData() {
                     try {
                         const response = await fetch('links.json');
