--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 <div class="w-full flex-shrink-0 px-1">
                     <template x-for="link in verticalLinks.filter(l => l.category === 'product')" :key="link.url">
                         <a :href="link.url" 
-                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-4 text-white mb-4 transition-all duration-300 transform hover:scale-105"
+                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-2 text-white mb-3 transition-all duration-300 transform hover:scale-105"
                            target="_blank"
                            :title="link.title">
                             <div class="flex items-center">
-                                <div class="w-12 h-12 rounded overflow-hidden mr-4 flex-shrink-0">
+                                <div class="w-12 h-12 rounded overflow-hidden ml-1 mr-4 flex-shrink-0">
                                     <template x-if="link.image">
                                         <img :src="link.image" :alt="link.title" class="w-full h-full object-cover">
                                     </template>
@@ -100,11 +100,11 @@
                 <div class="w-full flex-shrink-0 px-1">
                     <template x-for="link in verticalLinks.filter(l => l.category === 'content')" :key="link.url">
                         <a :href="link.url" 
-                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-4 text-white mb-4 transition-all duration-300 transform hover:scale-105"
+                           class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-2 text-white mb-3 transition-all duration-300 transform hover:scale-105"
                            target="_blank"
                            :title="link.title">
                             <div class="flex items-center">
-                                <div class="w-12 h-12 rounded overflow-hidden mr-4 flex-shrink-0">
+                                <div class="w-12 h-12 rounded overflow-hidden ml-1 mr-4 flex-shrink-0">
                                     <template x-if="link.image">
                                         <img :src="link.image" :alt="link.title" class="w-full h-full object-cover">
                                     </template>
@@ -124,30 +124,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="space-y-4">
-            <template x-for="link in verticalLinks" :key="link.url">
-                <a :href="link.url" 
-                   class="block bg-white bg-opacity-20 hover:bg-opacity-30 backdrop-blur-lg rounded-lg p-2 text-white text-center transition-all duration-300 transform hover:scale-105"
-                   target="_blank"
-                   :title="link.title">
-                    <div class="flex items-center justify-center">
-                        <div class="w-12 h-12 rounded overflow-hidden mr-3 flex-shrink-0">
-                            <template x-if="link.image">
-                                <img :src="link.image" 
-                                     :alt="link.title" 
-                                     class="w-full h-full object-cover">
-                            </template>
-                            <template x-if="!link.image">
-                                <div class="w-full h-full bg-white bg-opacity-20 flex items-center justify-center">
-                                    <span class="text-sm">🔗</span>
-                                </div>
-                            </template>
-                        </div>
-                        <div x-text="link.title"></div>
-                    </div>
-                </a>
-            </template>
-        </div> -->
     </div>
 
     <script>
