--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer Attribution -->
+        <div class="flex-shrink-0 text-center py-2 mb-4 text-white text-sm opacity-60">
+            <a href="https://www.linkedin.com/in/tehjinxi" target="_blank" class="hover:opacity-100 transition-opacity duration-300 flex items-center justify-center gap-1 group">
+                Built with <span class="animate-pulse">❤️</span> by <span class="bg-white bg-opacity-10 px-3 py-1 rounded-full group-hover:bg-opacity-20 group-hover:scale-105 transition-all duration-300 flex items-center gap-1">
+                    <svg class="w-3 h-3" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
+                    </svg>
+                    @tehjinxi
+                </span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
